add docs into swagger and add to redis
